--- a/snack-or-booze/src/NavBar.css
+++ b/snack-or-booze/src/NavBar.css
@@ -1,6 +1,6 @@
 nav {
   background-color: black;
-  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
 }
 
 .nav-item {
@@ -37,3 +37,9 @@ nav a:not(.navbar-brand):hover {
   font-weight: bold;
 }
 
+nav .navbar-brand a,
+nav .navbar-brand:hover,
+nav .navbar-brand:focus,
+nav .navbar-brand:active {
+  color: #f0f2f5;
+}
