fix list items to display w/ white text

--- a/snack-or-booze/src/FoodMenu.css
+++ b/snack-or-booze/src/FoodMenu.css
@@ -12,6 +12,11 @@
     color: white;
 }
 
+.list-group a h4,
+.list-group a li {
+    color: white;
+}
+
 .list-group a:not(:last-of-type) li {
     border-bottom: none !important;
 }
