--- a/snack-or-booze/src/FoodMenu.css
+++ b/snack-or-booze/src/FoodMenu.css
@@ -45,3 +45,12 @@
     box-shadow: inset 0 0 0 10px #ffffff;
     box-sizing: border-box;
 }
+
+#btn-add-new {
+    text-decoration: none;
+}
+
+.card .card-body button.btn {
+    display: block;
+    margin: 1rem auto;
+}
